add_subdirectory(zynqGrabber)
#add_subdirectory(chronocamGrabber)
#add_subdirectory(binaryDumper)
#add_subdirectory(qadIMUcal)
#add_subdirectory(esim-yarp)
#add_subdirectory(hexViewer)
if(OpenCV_FOUND)
  add_subdirectory(vFramer)
  add_subdirectory(vPreProcess)
endif()

if(prophesee_core_FOUND OR MetavisionSDK_FOUND)
  add_subdirectory(atis3-bridge)
endif()
